<?xml version="1.0"?>
<package format="2">
  <name>franka_rpm_msgs</name>
  <version>1.0.0</version>
  <description>franka_rpm_msgs</description>
  <maintainer email="rpmsnu@gmail.com">rpm</maintainer>
  <license>Apache 2.0</license>

  <author>rpm</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
