<?xml version="1.0"?>
<package>
  <name>pose_optimization</name>
  <version>1.0.0</version>
  <description>
    This package is to estimate the 6D object pose estimation using graph optimization with robot arm.
  </description>
  <maintainer email="myunghwan.jeon@kaist.ac.kr">
    Myung-Hwan Jeon
  </maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>ros_bridge</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>franka_rpm_msgs</build_depend>
  <build_depend>sensors_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>realsense2_camera</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>gtsam</build_depend>
  <build_depend>rosbag</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>ros_bridge</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>franka_rpm_msgs</run_depend>
  <run_depend>sensors_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>vision_msgs</run_depend>
  <run_depend>realsense2_camera</run_depend>  
  <run_depend>nav_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>gtsam</run_depend>
  <run_depend>rosbag</run_depend>
  
  
  
  
</package>
